@@ -28,6 +28,11 @@ Optional:
 Included libraries + licenses:
 
 ==========================================================
+Murmurhash2:
+
+All code is released to the public domain. For business purposes, Murmurhash is under the MIT license. 
+
+==========================================================
 libstemmer_c: Snowball stemmer (http://snowball.tartarus.org/)
 
 All the software given out on this Snowball site is covered by the BSD License (see http://www.opensource.org/licenses/bsd-license.html ), with Copyright (c) 2001, Dr Martin Porter, and (for the Java developments) Copyright (c) 2002, Richard Boulton.
