@@ -2,14 +2,15 @@
 Serious bugfix for {compose,parse}-{tree,tree-cky}: internal rules are not correctly computed
 Serious bugfix for sentence input in cicada and cicada_mpi: by default, we will read in sentence-mode, instead of previous "lattice" then fallback to "sentence"
 Added --input-sentence option to explicitly control the behavior
+Added --multiple option for cicada_unite_*
+Added --constrained option for constraining the # of nodes/height of minimal rules in GHKM extraction
+Added skip-sgml-tag in ngram/bleu/bleu-linear feature and mt evals, such as bleu, wer etc. But this will no skip <s> </s>
 Less memory consumption in scfg/ghkm/tree extraction by frequently checking memory usage (+ slightly slower)
 Less memory consumption in parse-coarse
 Better feature-vector implementation with smaller storage
 Faster(?) parse-{cky,tree,tree-cky} by pre-pruning rules if exceeding pop limits.
 Removed "dot" and use separate "dot_product" in dot_product.hpp
 Binarize-all now shares binarized nodes in a forest
-added --multiple option for cicada_unite_*
-added --constrained option for constraining the # of nodes/height of minimal rules in GHKM extraction
 
 2011-5-18
 Serious bugfix for generate-earley. We will now check the depth of all the passive/active edges to be extended.
